--- a/src/index.html
+++ b/src/index.html
@@ -6,38 +6,49 @@
   <title>Poll-A-Lot</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="theme-color" content="#009efd">
-  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#39F3BB">
+  <meta name="msapplication-navbutton-color" content="#39F3BB">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#39F3BB">
+  <link rel="manifest" href="assets/manifest.json">
 
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="/assets/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/assets/apple-touch-icon-114x114.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/assets/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/assets/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="/assets/apple-touch-icon-60x60.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="/assets/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="/assets/apple-touch-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/apple-touch-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/apple-touch-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/apple-touch-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/apple-touch-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/apple-touch-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/apple-touch-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/apple-touch-icon-76x76.png" />
   <link rel="apple-touch-icon-precomposed" sizes="152x152" href="/assets/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="/assets/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="/assets/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="/assets/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="/assets/favicon-128.png" sizes="128x128" />
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="icon" type="image/png" href="assets/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="assets/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="assets/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="assets/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="assets/favicon-128.png" sizes="128x128" />
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" type="image/png" href="assets/icon-512x512.png" sizes="512x512">
   <meta name="application-name" content="&nbsp;" />
   <meta name="msapplication-TileColor" content="#FFFFFF" />
-  <meta name="msapplication-TileImage" content="/assets/mstile-144x144.png" />
-  <meta name="msapplication-square70x70logo" content="/assets/mstile-70x70.png" />
-  <meta name="msapplication-square150x150logo" content="/assets/mstile-150x150.png" />
-  <meta name="msapplication-wide310x150logo" content="/assets/mstile-310x150.png" />
-  <meta name="msapplication-square310x310logo" content="/assets/mstile-310x310.png" />
+  <meta name="msapplication-TileImage" content="assets/mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="assets/mstile-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="assets/mstile-150x150.png" />
+  <meta name="msapplication-wide310x150logo" content="assets/mstile-310x150.png" />
+  <meta name="msapplication-square310x310logo" content="assets/mstile-310x310.png" />
+  <meta name="apple-mobile-web-app-title" content="Poll-A-Lot">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+  <meta property="og:site_name" content="Poll-A-Lot">
   <meta name="title" content="Poll-A-Lot">
-  <meta name="og:title" content="Website Name">
+  <meta property="og:title" content="Poll-A-Lot: Vote now!">
   <meta name="description" content="Poll creation and sharing made easy. Instant. Mobile. Share the way you want!">
-  <meta name="og:description" content="Poll creation and sharing made easy.">
-  <meta name="og:image" content="https://poll-a-lot.firebaseapp.com/assets/img/poll-a-lot-6.png">
+  <meta property="og:description" content="Poll creation and sharing made easy. Instant. Mobile. Share the way you want!">
+  <meta property="og:image" content="https://poll-a-lot.firebaseapp.com/assets/img/content-background-900x900.png">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://poll-a-lot.firebaseapp.com" />
+  <meta property="og:locale" content="en_GB" />
+  <meta property="og:site_name" content="Poll-A-Lot" />
+  
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" async="true" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" async="true" rel="stylesheet">
@@ -46,8 +57,8 @@
 <body>
   <app-root>
     <nav 
-      style="background-color: #3f51b5; height: 64px; width: 100%; font-family: Helvetica; font-size: 30px; color: white; text-align: center;">
-      <span>Poll-A-Lot</span>
+      style="background-color: #3f51b5; height: 56px; width: 100%; font-family: Tahoma, Geneva, sans-serif; font-size: 2.0em; color: white; text-align: center; display: flex; align-items: center; justify-content: center;">
+      <span>POLL-A-LOT</span>
     </nav>
     <noscript>
         <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">
