Improve styles, add footer, add loading spinner when content is fetched.

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
   <meta property="og:url" content="https://poll-a-lot.firebaseapp.com" />
   <meta property="og:locale" content="en_GB" />
   <meta property="og:site_name" content="Poll-A-Lot" />
-  
+
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" async="true" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC" async="true" rel="stylesheet">
@@ -56,22 +56,23 @@
 
 <body>
   <app-root>
-    <nav 
-      style="background-color: #3f51b5; height: 56px; width: 100%; font-family: Tahoma, Geneva, sans-serif; font-size: 2.0em; color: white; text-align: center; display: flex; align-items: center; justify-content: center;">
+    <nav style="background-color: #2cefac; height: 56px; width: 100%; font-family: Tahoma, Geneva, sans-serif; font-size: 2.0em; color: black; text-align: center; display: flex; align-items: center; justify-content: center;">
       <span>POLL-A-LOT</span>
     </nav>
     <noscript>
-        <h3 style="color: #673ab7; font-family: Helvetica; margin: 2rem;">
-            Sorry, but app is not available without javascript
-        </h3>
-      </noscript>
-    <div class="loader">
+      <h3 style="color: #673ab7; font-family: 'Amatic SC', cursive; Helvetica; margin: 2rem;">
+        Sorry, but app is not available without javascript
+      </h3>
+    </noscript>
+    <div class="spinner-bg">
+      <div class="loader">
         <div class="spinner">
           <div class="spinner">
             <div class="spinner"></div>
           </div>
         </div>
       </div>
+    </div>
   </app-root>
 </body>
 
