Refactors landing page to use app themes. Removes 'dummy header nav' since it makes to first load look silly.

--- a/src/index.html
+++ b/src/index.html
@@ -50,15 +50,12 @@
   <meta property="og:site_name" content="Poll-A-Lot" />
 
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" async="true" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" async="true" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" async="true" media="screen" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" async="true" media="screen" rel="stylesheet">
 </head>
 
 <body>
   <app-root>
-    <nav style="background-color: #2cefac; height: 56px; width: 100%; font-family: Tahoma, Geneva, sans-serif; font-size: 2.0em; color: black; text-align: center; display: flex; align-items: center; justify-content: center;">
-      <span>POLL-A-LOT</span>
-    </nav>
     <noscript>
       <h3 style="color: #673ab7; font-family: 'Amatic SC', cursive; Helvetica; margin: 2rem;">
         Sorry, but app is not available without javascript
