--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
   <meta name="theme-color" content="#39F3BB">
   <meta name="msapplication-navbutton-color" content="#39F3BB">
   <meta name="apple-mobile-web-app-status-bar-style" content="#39F3BB">
+
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+
   <link rel="manifest" href="assets/manifest.json">
 
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/apple-touch-icon-57x57.png" />
@@ -50,14 +54,14 @@
   <meta property="og:site_name" content="Poll-A-Lot" />
 
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" async="true" media="screen" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" async="true" media="screen" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" async="true" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" async="true" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
 </head>
 
 <body>
   <app-root>
     <noscript>
-      <h3 style="color: #673ab7; font-family: 'Amatic SC', cursive; Helvetica; margin: 2rem;">
+      <h3 style="color: #673ab7; font-family: 'Amatic SC', cursive; margin: 2rem;">
         Sorry, but app is not available without javascript
       </h3>
     </noscript>
