--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
   <meta property="og:site_name" content="Poll-A-Lot" />
 
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" async="true" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" async="true" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
 </head>
 
 <body>
