Improve the page layout.  Multiple layout fixes. Improve login/logout notifications. Improve app manifest.

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="theme-color" content="#39F3BB">
-  <meta name="msapplication-navbutton-color" content="#39F3BB">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#39F3BB">
+  <meta name="theme-color" content="#79f4bc">
+  <meta name="msapplication-navbutton-color" content="#79f4bc">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#79f4bc">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
