--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="#79f4bc">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
+  <!-- <meta name="mobile-web-app-capable" content="yes"> -->
 
   <link rel="manifest" href="assets/manifest.json">
 
