Add Google analytics. Further improvements in the fullscreen experience. Fix landing page positioning. Fix positioning on desktop screens.

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Poll-A-Lot</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118037368-1"></script>
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,6 +77,11 @@
       </div>
     </div>
   </app-root>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    </script>
 </body>
 
 </html>
