--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,8 @@
   <meta property="og:site_name" content="Poll-A-Lot" />
 
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC" media="screen" rel="preload" as="style" rel="stylesheet" onload="this.rel = 'stylesheet'" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
 </head>
 
 <body>
