--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="theme-color" content="#79f4bc">
-  <meta name="msapplication-navbutton-color" content="#79f4bc">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#79f4bc">
+  <meta name="theme-color" content="#FFE29F">
+  <meta name="msapplication-navbutton-color" content="#FFE29F">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#FFE29F">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <!-- <meta name="mobile-web-app-capable" content="yes"> -->
