--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <title>Poll-A-Lot</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118037368-1"></script>
-  <script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118037368-1"></script> -->
+  <!-- <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', 'UA-118037368-1');
-  </script>
+  </script> -->
 
   <base href="/">
 
