--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Amatic+SC">
+  <script src="https://kit.fontawesome.com/3c433422ec.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
