Improve poster reveal and intial load.

--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,10 @@
     <meta property="og:url" content="https://poll-a-lot.firebaseapp.com" />
     <meta property="og:locale" content="en_GB" />
     <meta property="og:site_name" content="Poll-A-Lot" />
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <script
       src="https://kit.fontawesome.com/3c433422ec.js"
       crossorigin="anonymous"
