--- a/src/index.html
+++ b/src/index.html
@@ -16,45 +16,12 @@
 
     <link rel="manifest" href="assets/manifest.json" />
 
+    <!-- Images -->
+
     <link
-      rel="apple-touch-icon-precomposed"
-      sizes="57x57"
-      href="assets/apple-touch-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="114x114"
-      href="assets/apple-touch-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="72x72"
-      href="assets/apple-touch-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="144x144"
-      href="assets/apple-touch-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="60x60"
-      href="assets/apple-touch-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="120x120"
-      href="assets/apple-touch-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="76x76"
-      href="assets/apple-touch-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon-precomposed"
-      sizes="152x152"
-      href="/assets/apple-touch-icon-152x152.png"
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/apple-touch-icon.png"
     />
     <link
       rel="icon"
@@ -77,41 +44,33 @@
     <link
       rel="icon"
       type="image/png"
-      href="assets/favicon-16x16.png"
       sizes="16x16"
+      href="assets/favicon-16x16.png"
     />
     <link
       rel="icon"
       type="image/png"
-      href="assets/favicon-128.png"
+      href="assets/favicon-128x128.png"
       sizes="128x128"
     />
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link
       rel="icon"
       type="image/png"
-      href="assets/icon-512x512.png"
+      href="assets/android-chrome-512x512.png"
       sizes="512x512"
     />
+
+    <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta name="msapplication-TileColor" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
+
+    <!-- Images end -->
+
     <meta name="application-name" content="&nbsp;" />
-    <meta name="msapplication-TileColor" content="#FFFFFF" />
+    <meta name="msapplication-TileColor" content="#000000" />
     <meta name="msapplication-TileImage" content="assets/mstile-144x144.png" />
-    <meta
-      name="msapplication-square70x70logo"
-      content="assets/mstile-70x70.png"
-    />
-    <meta
-      name="msapplication-square150x150logo"
-      content="assets/mstile-150x150.png"
-    />
-    <meta
-      name="msapplication-wide310x150logo"
-      content="assets/mstile-310x150.png"
-    />
-    <meta
-      name="msapplication-square310x310logo"
-      content="assets/mstile-310x310.png"
-    />
+
     <meta name="apple-mobile-web-app-title" content="Poll-A-Lot" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
