Fix issue with loading and add default image for poster loading.

--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,13 @@
       src="https://kit.fontawesome.com/3c433422ec.js"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,300&family=League+Gothic&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
