--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,10 @@
     />
     <meta
       property="og:image"
-      content="https://poll-a-lot.firebaseapp.com/assets/img/poll-a-lot-5.png"
+      content="https://poll-a-lot.firebaseapp.com/assets/img/poll-a-lot-meta-share.webp"
     />
+    <meta property="og:image:width" content="300" /> 
+    <meta property="og:image:height" content="300" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://poll-a-lot.firebaseapp.com" />
     <meta property="og:locale" content="en_GB" />
