Refactor pollitems into own subcollection. Add sorting with drag to movie lists. Fix calendar locatiozation issue.

--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
     <meta property="og:site_name" content="Poll-A-Lot" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
     />
     <script>
       if ('serviceWorker' in navigator) {
