Fixes issue with service workers

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,7 @@
     <meta name="theme-color" content="#FFE29F" />
     <meta name="msapplication-navbutton-color" content="#FFE29F" />
     <meta name="apple-mobile-web-app-status-bar-style" content="#FFE29F" />
-
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <!-- <meta name="mobile-web-app-capable" content="yes"> -->
+    <meta name="mobile-web-app-capable" content="yes" />
 
     <link rel="manifest" href="assets/manifest.json" />
 
@@ -89,7 +87,7 @@
       property="og:image"
       content="https://poll-a-lot.firebaseapp.com/assets/img/poll-a-lot-meta-share.webp"
     />
-    <meta property="og:image:width" content="300" /> 
+    <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://poll-a-lot.firebaseapp.com" />
@@ -99,16 +97,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined"
     />
-    <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/ngsw-worker.js');
-      }
-    </script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,300&family=League+Gothic&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,300&amp;family=League+Gothic&amp;display=swap"
       rel="stylesheet"
     />
   </head>
